# coherence-kernel

./: .gitattributes  .gitignore  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_FLOOR.md  HOMECOMING.md  INDEX.md  MANIFEST.md  NORTH_STAR.md  README.md  RELEASE_HISTORY.md  SECOND-BRAIN.md  WELCOME.md  build-form-cli.sh  fkwu.conf.example  form-cli  form-run  fourth-arm-bands.txt  kernel-ts-comparison.md  nvr.fk  t.fk  tiny.fk  validate.sh
.obsidian/: app.json  graph.json
audio/: whisper-full-encoder-f64-carrier.fk  whisper-tiny-centered-preprocess.fk  whisper-tiny-full-decoder-row-major.fk
axioms/: core-axioms.form  host-kernel.form
bootstrap/: ground-numeric-list.fk  ground-recursive.fk  ground.fk
cognition/: ask-grounded-rtx.fk  capitals-knowledge.fk  concept-10000-substantive-repair-111-nl-data.fk  concept-10000-substantive-repair-111-nl.fk  concept-10000-substantive-repair-111-nl.tsv  concept-13-alignment-truth.fk  concept-crystallization-contract.fk  concept-human-aligned-sw-fixture.fk  concept-human-aligned-sw-hash-audit.fk  concept-human-aligned-sw.fk  concept-human-corpus-125165-union.fk  concept-human-corpus-13-build.mjs  concept-human-corpus-13-fetch.sh  concept-human-corpus-13-metadata.fk  concept-human-corpus-13-offsets.fk  concept-human-corpus-13-reindex.mjs  concept-human-corpus-13-runtime.fk  concept-human-corpus-13.fk  concept-human-corpus-130000-audit-sample.fk  concept-human-corpus-130000-ingest.fk  concept-human-corpus-130000-mendeley-audit.fk  concept-human-corpus-130000-mendeley.fk  concept-human-corpus-130000-metadata.fk  concept-human-corpus-130000.fk  concept-nl-semantic-13-build.sh  concept-nl-semantic-13-machine-build.mjs  concept-nl-semantic-13-machine.tsv  concept-nl-semantic-13-metadata.fk  concept-nl-semantic-13-offsets.fk  concept-nl-semantic-13-omw.tsv  concept-nl-semantic-13-runtime.fk  concept-nl-semantic-13-source-manifest.txt  concept-nl-semantic-13.fk  concept-nl-substantive-repair-materialize.mjs  concept-nl-substantive-repair-primary-verify.mjs  concept-text-detection-13-runtime.fk  concept-text-detection-13.fk  concept-text-roundtrip-10000-13-build.mjs  concept-text-roundtrip-10000-13-metadata.fk  concept-text-roundtrip-10000-13-runtime.fk  (+36 more)
conformance/: canonical-s-expression-vectors.json  formbin2-malformed-vectors.json
contracts/: numeric-formats.canonical.json
control/: choice-lane-core.fk  invite-dispatch.fk  offer-ack-core.fk  pattern-match.fk
docs/: form-native-jit-track.form  live-dynamic-diagnostics.md  living-mesh.form  native-model-control-plane.md  native-thought-kernels.form  penumbra-map.md  re-architecture-stones.form  side-by-side.md  uplift-high-grammar-goal.form  world-sensor-floor.form
flatten/: README.md  SEED-DROP.md  form-eval-cli-loop.tbl  form-flatten.fk  gen-source-walker-table.fk  gen-source-walker.fk  gen-source-walker.sh  host-effect-grammar.fk
form-cli/: form-cli-ask-gate.fk  form-cli-ask.fk  form-cli-model.fk  form-cli-predict.fk  fsh-main.fk  fsh-rag-heal-main.fk
form-kernel-go/: bp_table.go  build-android.sh  fkwu_bridge_test.go  form_cli_test.go  formats_test.go  inductive.md  jit_dll_windows_test.go  jit_dylib_test.go  jit_inram_other.go  jit_inram_test.go  jit_inram_windows.go  jit_race.go  jit_test.go  jit_value_test.go  main.go  quotient.go  server.go  server_test.go
form-kernel-rust/: README.md  pyproject.toml  router_upstream_reuse_harness.py
form-kernel-rust/examples/: router-real-app-proof.fk  routes-method.fk  routes.fk
form-kernel-rust/recipes/: dot_product.fk  fib.fk  sum_list.fk
form-kernel-rust/src/: formats.rs  inductive.rs  main.rs  quotient.md  quotient.rs
form-kernel-ts/: package-lock.json
form-samples/: README.md  demo-config.json  fact.fk  float-artifact-roundtrip.fk  list-sum.fk  map-square.fk  math-proof-sum-odds.fk  test_module.py  word-count.fk  (+1 more)
form/form-kernel-rust/: Cargo.toml  README.md  build-android.sh  production_routes_harness.py  router_body_harness.py  router_concurrency_harness.py  router_fanout_timeout_harness.py  router_header_passthrough_harness.py  router_keepalive_harness.py  router_proof_harness.py  router_real_app_harness.py  test_serve.py
form/form-kernel-rust/examples/: router-body-proof.fk  router-proof.fk
form/form-kernel-rust/libraries/: integer-numerics.recipelib.json
form/form-kernel-rust/recipes/: factorial.fk  vector_add.fk
form/form-kernel-rust/src/: bp_table.rs  formats.rs  inductive.md  inductive.rs  lib.rs  main.rs  quotient.md
walkers/rust/: Cargo.toml  README.md
walkers/rust/src/: main.rs
(+5626 files in other folders)
