[package]
name = "form-walker-rust"
version = "0.1.0"
edition = "2021"

# The minimal Rust proof-walker. ONE job: an INDEPENDENT parse + pure-compute
# evaluator that witnesses four-way agreement. Its worth is that the lexer and
# evaluator are SEPARATE from fkwu's own paths — a shared parse/semantic bug
# (the scientific-notation 1e-05 float bug was caught exactly this way) shows up
# as a divergence here rather than slipping through. No external deps: the
# witness must be its own, not a library's.
[[bin]]
name = "form-walker-rust"
path = "src/main.rs"

[profile.release]
opt-level = 3
